--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
-    <div class="" style="background-color:blue;">
-      <h2>Credit Union POS</h2>
+  <body style="padding:0px; margin:0px;">
+    <div class="" style="background-color:blue; margin-bottom:0px; width:100%; padding-left: 40%;
+    padding-top: 14px;">
+      <h2 style="margin:0px; height:50px; color:white;">Credit Union POS</h2>
 
     </div>
 
-    <table style="width: 100%; background-color:lightgrey;">
+    <table style="width: 100%; height:535px; background-color:lightgrey; margin-top:0px; border: solid 2px black;">
       <tr>
         <td>Login:<input type="text" name="" value=""></td>
         <td>Password:<input type="text" name="" value=""></td>
@@ -24,5 +25,9 @@
       </tr>
     </table>
 
+<footer style="background-color:blue; margin-bottom:0px; width:100%; padding-left: 43%;
+padding-top: 14px; color:white;">
+        Copyright &copy Credit Union
+</footer>
   </body>
 </html>
