profile-pic-calculator

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Credit Union</title>
+
   </head>
   <body style="padding:0px; margin:0px;">
     <div class="" style="background-color:blue; margin-bottom:0px; width:100%; padding-left: 40%;
@@ -11,23 +12,62 @@
 
     </div>
 
-    <table style="width: 100%; height:535px; background-color:lightgrey; margin-top:0px; border: solid 2px black;">
-      <tr>
-        <td>Login:<input type="text" name="" value=""></td>
-        <td>Password:<input type="text" name="" value=""></td>
-      </tr>
-      <tr>
-        <td>First Name:<input type="text" name="" value=""></td>
-        <td>Last Name:<input type="text" name="" value=""></td>
-      </tr>
-      <tr>
-        <td>Amount: <input type="text" name="" value=""></td>
-      </tr>
-    </table>
+    <div class="body-pos">
+      <table style=" width: 100px; float:right;">
+        <tr>
+          <td style="width:20px;">1</td>
+          <td style="width:20px;">2</td>
+          <td style="width:20px;">3</td>
+        </tr>
+        <tr>
+          <td style="width:20px;">4</td>
+          <td style="width:20px;">5</td>
+          <td style="width:20px;">6</td>
+        </tr>
+        <tr>
+          <td style="width:20px;">7</td>
+          <td style="width:20px;">8</td>
+          <td style="width:20px;">9</td>
+        </tr>
+      </table>
 
-<footer style="background-color:blue; margin-bottom:0px; width:100%; padding-left: 43%;
-padding-top: 14px; color:white;">
-        Copyright &copy Credit Union
-</footer>
+      <div class="customer" style="display:inline-flex; width: 600px;">
+        <div class="customer-image">
+            <img src="download.jpeg" alt="">
+        </div>
+        <div class="customer-info" style="float:right;">
+          <table>
+
+            <tr>
+              <td>First Name: Carol </td>
+              <td>Last Name: Smith</td>
+            </tr>
+            <tr>
+              <td>Account#: 120985701293</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+
+      <div class="transaction-history" style="height:320px; background-color:#D3D7E1; border:black solid 1px;">
+        <h2>Transaction History</h2>
+        <hr>
+      </div>
+
+
+    </div>
+
+
+    <footer style="background-color:blue; margin-bottom:0px; width:100%; padding-left: 43%;
+    padding-top: 14px; color:white;">
+            Copyright &copy Credit Union
+    </footer>
+
+    <script type="text/javascript">
+
+    </script>
+<script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
+crossorigin="anonymous"></script>
   </body>
 </html>
